# mesa-uwp

./: .clang-format-include  .editorconfig  .git-blame-ignore-revs  .gitattributes  .gitignore  .gitlab-ci.yml  .mailmap  Android.common.mk  Android.mk  CODEOWNERS  README.rst  VERSION  meson.build  meson_build.cmd  meson_build_nonuwp.cmd  meson_build_nonuwp_release.cmd  meson_build_release.cmd  meson_options.txt
.github/workflows/: ci.yml  macos.yml
.gitlab-ci/: all-skips.txt  crosvm-init.sh  crosvm-runner.sh  cuttlefish-runner.sh  deqp-all-skips.txt  deqp-default-skips.txt  deqp-runner.sh  download-git-cache.sh  farm-rules.yml  fossilize-runner.sh  gtest-runner.sh  image-tags.yml  lava-gitlab-ci.yml  lava.yml.jinja2  lava_job_submitter.py  prepare-artifacts.sh  run-shader-db.sh  run-yamllint.sh  setup-test-env.sh  skqp-runner.sh  test-source-dep.yml
.gitlab-ci/b2c/: b2c.yml.jinja2.jinja2  generate_b2c.py
.gitlab-ci/bare-metal/: arm64_a630_gles_others.sh  cros-servo.sh  cros_servo_run.py  fastboot.sh  fastboot_run.py  init.sh  poe-powered.sh  poe_run.py  rootfs-setup.sh  serial_buffer.py
.gitlab-ci/common/: capture-devcoredump.sh  generate-env.sh  init-stage1.sh  init-stage2.sh  init.sh  kdl.sh  start-x.sh
.gitlab-ci/container/: arm64.config  arm_build.sh  arm_test.sh  baremetal_build.sh  build-angle.sh  build-apitrace.sh  build-crosvm.sh  build-deqp-runner.sh  build-deqp.sh  build-directx-headers.sh  build-fossilize.sh  build-kdl.sh  build-kernel.sh  build-libdrm.sh  build-mold.sh  build-piglit.sh  build-rust.sh  build-skqp.sh  build-virglrenderer.sh  build-vkd3d-proton.sh  build-vulkan-validation.sh  build-wayland.sh  container_pre_build.sh  create-android-cross-file.sh  create-cross-file.sh  create-rootfs.sh  cross_build.sh  gitlab-ci.yml  install-wine-apitrace.sh  install-wine-dxvk.sh  lava_build.sh  setup-rootfs.sh  setup-wine.sh  x86_64.config  x86_build-base.sh  x86_build.sh  x86_test-gl.sh  x86_test-vk.sh
.gitlab-ci/lava/: exceptions.py  lava-gitlab-ci.yml  lava-pytest.sh  lava-submit.sh  lava.yml.jinja2  lava_job_submitter.py  requirements-test.txt
.gitlab-ci/meson/: build.sh
.gitlab-ci/piglit/: piglit-all-skips.txt  (+4 more)
android/: Android.mk  mesa3d_cross.mk
docs/: amber.rst  android.rst  codingstyle.rst  conf.py  developers.rst  dispatch.rst  doxygen-wrapper.py  egl.rst  envvars.rst  extensions.rst  faq.rst  features.txt  gitlab-ci.yml  history.rst  index.rst  install.rst  isaspec.rst  license.rst  lists.rst  macos.rst  meson.rst  opengles.rst  osmesa.rst  perfetto.rst  precompiled.rst  release-calendar.csv  releasing.rst  relnotes.rst  rusticl.rst  shading.rst  sourcetree.rst  submittingpatches.rst  systems.rst  thanks.rst  u_trace.rst  utilities.rst  viewperf.rst
include/: c99_compat.h  c99_math.h  kopper_interface.h  meson.build
src/: .clang-format  meson.build
src/gallium/targets/libgl-gdi/: libgl_gdi.c  meson.build  stw_wgl.c  stw_wgl.h
src/gallium/targets/libgl-gdi/tests/: wgl_tests.cpp
src/intel/vulkan/shaders/: common_generated_draws.glsl  common_query_copy.glsl  generated_draws.glsl  generated_draws_count.glsl  gfx11_generated_draws.glsl  gfx9_generated_draws.glsl  interface.h  memcpy_compute.glsl  meson.build
src/nouveau/compiler/: bitset.rs  bitview.rs  meson.build  nak.h  nak.rs  nak_assign_regs.rs  nak_bindings.h  nak_builder.rs  nak_calc_instr_deps.rs  nak_cfg.rs  nak_encode_sm70.rs  nak_encode_sm75.rs  nak_encode_tu102.rs  nak_from_nir.rs  nak_ir.rs  nak_ir_proc.rs  nak_legalize.rs  nak_liveness.rs  nak_lower_copy_swap.rs  nak_lower_par_copies.rs  nak_nir.c  nak_nir_add_barriers.c  nak_nir_algebraic.py  nak_nir_lower_scan_reduce.c  nak_nir_lower_tex.c  nak_nir_lower_vtg_io.c  nak_opt_bar_prop.rs  nak_opt_copy_prop.rs  nak_opt_dce.rs  nak_opt_lop.rs  nak_opt_out.rs  nak_private.h  nak_repair_ssa.rs  nak_sph.rs  nak_spill_values.rs  nak_to_cssa.rs  nir.rs  nvfuzz.rs  union_find.rs  util.rs
src/nouveau/compiler/nak/: api.rs  assign_regs.rs  bitset.rs  builder.rs  calc_instr_deps.rs  cfg.rs  encode_sm50.rs  encode_sm70.rs  from_nir.rs  ir.rs  legalize.rs  lib.rs  liveness.rs  lower_copy_swap.rs  lower_par_copies.rs  nir.rs  opt_copy_prop.rs  opt_dce.rs  opt_jump_thread.rs  opt_lop.rs  opt_out.rs  repair_ssa.rs  sph.rs  spill_values.rs  union_find.rs
src/nouveau/compiler/nvfuzz/: main.rs
src/nouveau/mme/: meson.build  mme_builder.h  mme_fermi.c  mme_fermi.h  mme_fermi.xml  mme_fermi_builder.c  mme_fermi_builder.h  mme_fermi_dump.c  mme_fermi_sim.c  mme_fermi_sim.h  mme_tu104.c  mme_tu104.h  mme_tu104.xml  mme_tu104_builder.c  mme_tu104_builder.h  mme_tu104_dump.c  mme_tu104_sim.c  mme_tu104_sim.h  mme_value.h
src/nouveau/mme/tests/: mme_builder_test.cpp  mme_fermi_sim_hw_test.cpp  mme_runner.cpp  mme_runner.h  mme_tu104_sim_hw_test.cpp
src/nouveau/nil/: meson.build  nil.c  nil.h  nil_format.c  nil_format.h  nil_image.c  nil_image.h  nil_image_tic.c
src/nouveau/nvidia-headers/: class_parser.py  meson.build  nv_device_info.h  nv_push.c  nv_push.h  nvtypes.h  update-from-open-gpu-doc.py
src/nouveau/vulkan/: meson.build  nvk_bo_sync.c  nvk_bo_sync.h  nvk_buffer.c  nvk_buffer.h  nvk_buffer_view.c  nvk_buffer_view.h  nvk_cmd_blit.c  nvk_cmd_buffer.c  nvk_cmd_buffer.h  nvk_cmd_clear.c  nvk_cmd_copy.c  nvk_cmd_dispatch.c  nvk_cmd_draw.c  nvk_cmd_meta.c  nvk_cmd_pool.c  nvk_cmd_pool.h  nvk_codegen.c  nvk_compute_pipeline.c  nvk_descriptor_set.c  nvk_descriptor_set.h  nvk_descriptor_set_layout.c  nvk_descriptor_set_layout.h  nvk_descriptor_table.c  nvk_descriptor_table.h  nvk_device.c  nvk_device.h  nvk_device_memory.c  nvk_device_memory.h  nvk_event.c  nvk_event.h  nvk_format.c  nvk_format.h  nvk_graphics_pipeline.c  nvk_heap.c  nvk_heap.h  nvk_image.c  nvk_image.h  nvk_image_view.c  nvk_image_view.h  (+25 more)
src/nouveau/winsys/: meson.build  nouveau_bo.c  nouveau_bo.h  nouveau_context.c  nouveau_context.h  nouveau_device.c  nouveau_device.h  nouveau_private.h  nouveau_push.c  nouveau_push.h  push906f.h
subprojects/: libarchive.wrap  libdrm.wrap  perfetto.wrap  proc-macro2.wrap  quote.wrap  syn.wrap  unicode-ident.wrap  xbox-swap.wrap
(+5000 files in other folders)
